he cent4rado las imagenes y los textos

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 						</div>
 					</div>	
 			</div>
-			<h2>No podrás encontrarlo a mejor precio</h2>
+			<h2 class="piefoto">No podrás encontrarlo a mejor precio</h2>
 		</div>
 
 		<div class="col-3">
@@ -89,7 +89,7 @@
 						</div>
 					</div>	
 			</div>
-			<h2>La mejor venta de teléfonos</h2>
+			<h2 class="piefoto">La mejor venta de teléfonos</h2>
 			<p></p>
 		</div>
 
@@ -103,7 +103,7 @@
 						</div>
 					</div>	
 			</div>
-			<h2>Variedad de productos electrónicos para el gusto de todos</h2>
+			<h2 class="piefoto">Variedad de productos electrónicos para el gusto de todos</h2>
 		</div>
 
 	</div>
